# llm7shi

./: CHANGELOG.md  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: 20250629-repetition-detection.md  20250630-schema-jsx.md  20250702-ollama-thinking.md  20250703-schema-descriptions.md  20251204-ollama-cleanup.md  20251206-repetition-threshold.md  20251207-quasi-repetition.md  20260112-api-key-security.md  20260607-openrouter-reasoning.md  20260608-provider-apis.md  README.md
docs/20260608-provider-apis/: run_google.py  run_ollama.py  run_openrouter.py
examples/: README.md  compat0.md  compat0.py  compat1.md  compat1.py  compat2.md  compat2.py  essay.md  essay.py  essay.txt  gemma4.md  gemma4.py  hello.md  hello.py  multiturn.md  multiturn.py  openrouter.md  openrouter.py  schema.json  schema.md  schema.py  schema1.json  schema1.md  schema1.py  schema2.md  schema2.py
llm7shi/: README.md  __init__.md  __init__.py  __main__.md  __main__.py  compat.md  compat.py  gemini.md  gemini.py  monitor.md  monitor.py  ollama.md  ollama.py  openai.md  openai.py  response.md  response.py  terminal.md  terminal.py  utils.md  utils.py
tests/: README.md  test_compat.md  test_compat.py  test_compat_vendor.md  test_compat_vendor.py  test_gemini.md  test_gemini.py  test_gpt_oss.md  test_gpt_oss.py  test_hello.md  test_hello.py  test_monitor_repetition.md  test_monitor_repetition.py  test_monitor_stream.md  test_monitor_stream.py  test_monitor_whitespace.md  test_monitor_whitespace.py  test_schema1.md  test_schema1.py  test_schema2.md  test_schema2.py  test_terminal.md  test_terminal.py  test_utils.md  test_utils.py  test_utils_descriptions.md  test_utils_descriptions.py  test_utils_repetition.md  test_utils_repetition.py  test_utils_schema.md  test_utils_schema.py
